--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    //implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -31,11 +31,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.google.firebase:firebase-core:17.2.2'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.firebase:firebase-database:19.2.0'
-    implementation 'com.android.support:design:28.+'
-    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    //implementation 'com.google.firebase:firebase-core:17.2.2'
+    //implementation 'com.google.firebase:firebase-auth:19.2.0'
+    //implementation 'com.google.firebase:firebase-database:19.2.0'
+    //implementation 'com.android.support:design:28.+'
+    //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    //implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'ru.tinkoff.decoro:decoro:1.1.1'
 }
