--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/AppTheme2"
             android:label="Заявки">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:focusable = "true"  android:focusableInTouchMode = "true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
