--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrdersActivity"
-
-            android:label="Заявки">
-        </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".orders_tab"
+            android:label="@string/title_activity_orders_tab"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".OrdersActivity"
+            android:label="Заявки"></activity>
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
