--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".register"
+            android:theme="@style/AppTheme2"
+            ></activity>
         <activity
             android:name=".OrdersActivity"
             android:label="@string/title_activity_orders"
