--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
+
         <activity android:name=".register"
             android:theme="@style/AppTheme2"
             ></activity>
         <activity android:name=".ForgetPasswordActivity"
             android:theme="@style/AppTheme2"
             ></activity>
+        <activity android:name=".edit_store"
+            android:label="@string/title_edit"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme"
+            >
+        </activity>
         <activity
             android:name=".OrdersActivity"
             android:label="@string/title_activity_orders"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme2">
