--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:theme="@style/AppTheme2"
             ></activity>
         <activity android:name=".AddStore"
-            android:label="@string/title_edit"
+            android:label="@string/title_add_store"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme"
             >
