--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 org.gradle.parallel=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_231
 
