--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
-        <activity android:name=".add_cashbox"
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".NewOrderActivity"
+            android:label="Новая заявка"
+            android:parentActivityName=".NewOrderActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".add_cashbox"
             android:label="@string/title_add_cashbox"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Register"
             android:theme="@style/AppTheme2" />
