--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         resConfigs "en", "ru"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -44,4 +45,5 @@ dependencies {
     //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     //implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'ru.tinkoff.decoro:decoro:1.1.1'
+    implementation 'com.android.support:design:28.0.0'
 }
