--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -35,15 +36,10 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    //implementation 'com.google.firebase:firebase-core:17.2.2'
-    //implementation 'com.google.firebase:firebase-auth:19.2.0'
-    //implementation 'com.google.firebase:firebase-database:19.2.0'
-    //implementation 'com.android.support:design:28.+'
-    //implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-    //implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     implementation 'ru.tinkoff.decoro:decoro:1.1.1'
     implementation 'com.android.support:design:28.0.0'
 }
