--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
-        <activity android:name=".OrdersFragment"></activity>
+        <activity android:name=".ProfileEdit"
+            android:label="@string/title_edit"
+            android:parentActivityName=".OrdersActivity"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity
+            android:name=".MyStores"
+            android:label="@string/my_stores"
+            android:parentActivityName=".OrdersActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".OrdersFragment" />
         <activity
             android:name=".bottom_navbar"
             android:label="BottomNavBar"
