--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
-        <activity android:name=".ProfileEdit"
+        <activity android:name=".MyCashboxes"
+            android:parentActivityName=".MyStores"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".ProfileEdit"
             android:label="@string/title_edit"
             android:parentActivityName=".OrdersActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".MyStores"
             android:label="@string/my_stores"
             android:parentActivityName=".OrdersActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity android:name=".OrdersFragment" />
         <activity
             android:name=".bottom_navbar"
