--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         <activity android:name=".MyCashboxes"
             android:parentActivityName=".MyStores"
             android:theme="@style/AppTheme"></activity>
+        <activity android:name=".SelectCashbox"
+            android:label="@string/title_add_cashbox"
+            android:parentActivityName=".add_cashbox"
+            android:theme="@style/AppTheme"
+            ></activity>
         <activity
             android:name=".ProfileEdit"
             android:label="@string/title_edit"
