--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
+        <activity android:name=".ListFilterActivity"></activity>
         <activity android:name=".MyCashboxes"
             android:parentActivityName=".MyStores"
             android:theme="@style/AppTheme"></activity>
