--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'ru.tinkoff.decoro:decoro:1.1.1'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation 'org.jsoup:jsoup:1.12.1'
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
