--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cashbox">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".DaDataApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
-        <activity android:name=".MyCashboxes"
+        <activity android:name=".TestDadata"></activity>
+        <activity
+            android:name=".MyCashboxes"
             android:parentActivityName=".MyStores"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".SelectCashbox"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".SelectCashbox"
             android:label="@string/title_add_cashbox"
             android:parentActivityName=".add_cashbox"
-            android:theme="@style/AppTheme"
-            ></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ProfileEdit"
             android:label="@string/title_edit"
             android:parentActivityName=".OrdersActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".MyStores"
             android:label="@string/my_stores"
