--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme2">
-        <activity android:name=".AllCashboxes"></activity>
+        <activity android:name=".AllCashboxes"
+            android:parentActivityName=".OrdersActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/my_cashboxes"/>
+
         <activity android:name=".TestDadata" />
         <activity
             android:name=".MyCashboxes"
@@ -35,10 +39,6 @@
             android:parentActivityName=".OrdersActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".OrdersFragment" />
-        <activity
-            android:name=".bottom_navbar"
-            android:label="BottomNavBar"
-            android:theme="@style/AppTheme" />
         <activity
             android:name=".ProfileActivity"
             android:label="@string/profile_label"
